# Software-Testing

./: .gitmodules
Lab_1/: Vehicle.java  VehicleTest.java
Lab_2/: README.md  pom.xml
Lab_2/src/main/java/: StrangeGame.java
Lab_2/src/test/java/: StrangeGameTest.java
Lab_4/: Pipfile  student_0710734.py
Lab_5/: docker-compose.yml
Lab_5/share/: Makefile  llvm-lab-pass.cc  target  target.c
Lab_6/: 1.c  2.c  3.c  4.c  5.c  6.c  report.md
Lab_7/: Makefile  bmpgrayscale.c
Lab_8/: pyproject.toml  solve.py
